# bigtime-t-strings

./: .gitignore  README.md  bigtime.py  justfile  pyproject.toml
.github/workflows/: pages.yml
data/: .gitignore  big-time.jsonl
templates/: card.html  index.html
