[project]
name = "bigtime"
version = "0.1.0"
description = "Find repositories that use Python 3.14's t-string literals"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["click>=8.3.0", "pyright>=1.1.406", "ruff>=0.14.0"]


[tool.pyright]
exclude = [".venv", ".git", ".github"]

[tool.ruff.lint]
preview = true
